<resources>
    <string name="app_name">UserDetails</string>
    <string name="birthday">Birthday</string>
    <string name="save_Button">SAVE</string>
    <string name="zip">Zip</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="Name">UserName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photoID">photoId</string>
    <string name="take_photo">take photo</string>
    <string name="expand_image">expand_image</string>
    <string name="description_zoom_touch_close">zoom</string>
</resources>